2A/05_Projet_GL/src/test/deca/context/invalid/complet/57_this_main.deca
// Description :
//   this dans main 
// Resultats :
//    ligne 13 :  'this' ne peut pas être appelé en dehors d'une classe
// Historique :
//  cree le 16/01/2024

class A {
    int x ; 
}

{
    int a = this.x;
}